k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opentech-webapp
  labels:
    name: opentech-webapp
    security.compliance/pod-security-standard: restricted
